.metadata/.plugins/org.eclipse.cdt.ui/006_5_HAL_REAL_ADC_VOLTAGE_AND_MULTI_ADC.build.log
18:25:06 **** Incremental Build of configuration Debug for project 006_5_HAL_REAL_ADC_VOLTAGE_AND_MULTI_ADC ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\RTOS2\Template\cmsis_os1.o ..\Drivers\CMSIS\RTOS2\Template\cmsis_os1.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\NN\NN_Lib_Tests\nn_test\Ref_Implementations\arm_depthwise_separable_conv_HWC_q7_ref_nonsquare.o ..\Drivers\CMSIS\NN\NN_Lib_Tests\nn_test\Ref_Implementations\arm_depthwise_separable_conv_HWC_q7_ref_nonsquare.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\DSP\Source\TransformFunctions\arm_dct4_q15.o ..\Drivers\CMSIS\DSP\Source\TransformFunctions\arm_dct4_q15.c 
In file included from ..\Drivers\CMSIS\RTOS2\Template\cmsis_os1.c:28:0:
..\Drivers\CMSIS\RTOS2\Template\cmsis_os.h:157:23: fatal error: cmsis_os2.h: No such file or directory
 #include "cmsis_os2.h"
                       ^
compilation terminated.
In file included from ..\Drivers\CMSIS\NN\NN_Lib_Tests\nn_test\Ref_Implementations\arm_depthwise_separable_conv_HWC_q7_ref_nonsquare.c:19:0:
..\Drivers\CMSIS\NN\NN_Lib_Tests\nn_test\Ref_Implementations\ref_functions.h:22:22: fatal error: arm_math.h: No such file or directory
 #include "arm_math.h"
                      ^
compilation terminated.
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\DSP\Source\FilteringFunctions\arm_lms_init_q15.o ..\Drivers\CMSIS\DSP\Source\FilteringFunctions\arm_lms_init_q15.c 
..\Drivers\CMSIS\DSP\Source\TransformFunctions\arm_dct4_q15.c:52:9: error: unknown type name 'arm_dct4_instance_q15'
   const arm_dct4_instance_q15 * S,
         ^~~~~~~~~~~~~~~~~~~~~
..\Drivers\CMSIS\DSP\Source\TransformFunctions\arm_dct4_q15.c:53:3: error: unknown type name 'q15_t'
   q15_t * pState,
   ^~~~~
..\Drivers\CMSIS\DSP\Source\TransformFunctions\arm_dct4_q15.c:54:3: error: unknown type name 'q15_t'
   q15_t * pInlineBuffer)
   ^~~~~
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\DSP\DSP_Lib_TestSuite\RefLibs\src\StatisticsFunctions\std.o ..\Drivers\CMSIS\DSP\DSP_Lib_TestSuite\RefLibs\src\StatisticsFunctions\std.c 
..\Drivers\CMSIS\DSP\Source\FilteringFunctions\arm_lms_init_q15.c:29:22: fatal error: arm_math.h: No such file or directory
 #include "arm_math.h"
                      ^
compilation terminated.
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_adc.o ..\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_adc.c 
..\Drivers\CMSIS\DSP\DSP_Lib_TestSuite\RefLibs\src\StatisticsFunctions\std.c:1:17: fatal error: ref.h: No such file or directory
 #include "ref.h"
                 ^
compilation terminated.
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\DSP\Source\CommonTables\arm_const_structs.o ..\Drivers\CMSIS\DSP\Source\CommonTables\arm_const_structs.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Drivers\CMSIS\DSP\Source\MatrixFunctions\arm_mat_cmplx_mult_q31.o ..\Drivers\CMSIS\DSP\Source\MatrixFunctions\arm_mat_cmplx_mult_q31.c 
..\Drivers\CMSIS\DSP\Source\CommonTables\arm_const_structs.c:30:31: fatal error: arm_const_structs.h: No such file or directory
 #include "arm_const_structs.h"
                               ^
compilation terminated.
Info: Parallel threads used: 3

18:25:06 Build Finished (took 431ms)

